# actix-admin-web

./: README.md
server/: .env  Cargo.toml  README.md  config.toml  rust-toolchain.toml
server/admin/: .env  Cargo.toml  README.md  config.yaml
server/admin/api-docs/: openapi.json
server/admin/src/: asset.rs  constant.rs  main.rs  router.rs  server.rs  state.rs
server/admin/src/app/: mod.rs
server/admin/src/app/auth/: enums.rs  mod.rs
server/admin/src/app/log/: mod.rs
server/admin/src/app/perm/: mod.rs
server/admin/src/app/public/: mod.rs
server/admin/src/app/system/: mod.rs
server/admin/src/app/template/: mod.rs
server/admin/src/config/: mod.rs  mysql.rs
server/admin/src/middleware/: auth.rs  mod.rs
server/admin/src/router/: admin_web_site.rs  mod.rs
server/app/web/: Cargo.toml  README.md
server/app/web/src/: asset.rs  context.rs  main.rs  open_api_doc.rs  state.rs
server/app/web/src/controller/: mod.rs  resources.rs  user.rs  welcome.rs
server/app/web/src/dao/: user.rs
server/app/web/src/dto/: README.md  mod.rs  welcome.rs
server/app/web/src/middleware/: auth.rs
server/app/web/src/routes/: mod.rs  (+5 more)
server/core/: Cargo.toml
server/core/actix_validator/: Cargo.toml
server/core/actix_validator/src/: json.rs  query.rs
server/core/bak/dao/: Cargo.toml
server/core/bak/dto/: Cargo.toml
server/core/bak/service/: Cargo.toml
server/core/code/: Cargo.toml
server/core/code/src/: code.rs  error.rs  lib.rs
server/core/code_msg_derive/: Cargo.toml
server/core/code_msg_derive/src/: lib.rs
server/core/config/: Cargo.toml
server/core/config/src/: lib.rs
server/core/context/: Cargo.toml
server/core/context/src/: context.rs  lib.rs  middleware.rs
server/core/controller/: Cargo.toml  README.md
server/core/controller/src/: lib.rs  user.rs  welcome.rs
server/core/dao/: Cargo.toml  README.md
server/core/dao/src/: lib.rs  log_system.rs  user.rs
server/core/database/: Cargo.toml  README.md
server/core/database/src/: config.rs  curd.rs  lib.rs  pool.rs
server/core/database/tests/: sqlite_test.rs
server/core/dto/: Cargo.toml
server/core/dto/src/: common.rs  lib.rs  perm_user.rs  welcome.rs
server/core/entity/: Cargo.toml  README.md
server/core/entity/src/: api_http.rs  api_role_http_rel.rs  api_token.rs  app_template.rs  log_http.rs  log_system.rs  log_web.rs  mod.rs  perm_menu.rs  perm_role.rs  perm_role_menu_rel.rs  perm_user.rs  perm_user_api_token.rs  perm_user_role_rel.rs  prelude.rs  sys_captcha.rs  sys_config.rs  sys_icon.rs  sys_user_login.rs
server/core/jwt/: Cargo.toml
server/core/jwt/src/: lib.rs
server/core/logger/: Cargo.toml  README.md
server/core/logger/src/: config.rs  dao.rs  lib.rs
server/core/migration/: Cargo.toml
server/core/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230611_123914_create_perm_user_table.rs  m20230617_084425_create_log_system.rs  m20230617_084425_create_log_system_table.rs  m20240216_123914_create_perm_user.rs  m20240216_123914_create_perm_user_table.rs  m20240218_145452_create_perm_role.rs  m20240218_161915_create_log_user_login.rs  m20240218_161915_create_sys_user_login.rs  m20240218_161916_create_sys_captcha.rs
server/core/response/: Cargo.toml  README.md
server/core/response/src/: lib.rs  response.rs
server/core/service/: Cargo.toml
server/core/service/src/: lib.rs  user.rs
server/core/utils/: Cargo.toml
server/core/utils/src/: crypto.rs  json_convert.rs  lib.rs  time_convert.rs
server/crates/: Cargo.toml  README.md
server/crates/app_state/: Cargo.toml
server/crates/app_state/src/: lib.rs
server/crates/core/: README.md
server/crates/core/actix_validator/: Cargo.toml
server/crates/core/cache/: Cargo.toml
server/crates/core/code/: Cargo.toml  README.md
server/crates/core/code_msg_derive/: Cargo.toml
server/crates/core/context/: Cargo.toml
server/crates/core/database/: Cargo.toml
server/crates/core/entity/: Cargo.toml
server/crates/core/jwt/: Cargo.toml
server/crates/core/logger/: Cargo.toml
server/crates/core/migration/: .env  Cargo.toml
server/crates/core/response/: README.md
server/crates/core/scheduler/: Cargo.toml
server/crates/core/utils/: Cargo.toml  README.md
server/crates/inject/: Cargo.toml
server/crates/inject/src/: lib.rs
server/crates/middleware/: Cargo.toml
server/crates/middleware/src/: api_operation.rs  auth.rs  casbin_auth.rs  constant.rs  lib.rs  open_api_auth.rs  openapi_auth.rs  system_api_auth.rs  system_auth.rs
server/crates/mock_request/: Cargo.toml
server/crates/mock_request/src/: lib.rs  request.rs  router.rs
server/crates/plugins/: Cargo.toml
server/crates/service_hub/: Cargo.toml  README.md
server/crates/service_hub/auth/: Cargo.toml
server/crates/service_hub/initialize/: Cargo.toml
server/crates/service_hub/log/: Cargo.toml
server/crates/service_hub/organization/: Cargo.toml
server/crates/service_hub/perm/: Cargo.toml
server/crates/service_hub/permission/: Cargo.toml
server/crates/service_hub/public/: Cargo.toml
server/crates/service_hub/schedule/: Cargo.toml  README.md
server/crates/service_hub/src/: asset_state.rs  constant.rs  inject.rs  lib.rs
server/crates/service_hub/system/: Cargo.toml
server/crates/service_hub/template/: Cargo.toml
server/crates/service_hub/tests/: template_dao_mock.rs.bak
server/crates/service_hub/user/: Cargo.toml
server/crates/timer/: Cargo.toml
server/crates/timer/src/: demo.rs  demo2.rs  lib.rs
server/web/: .env  Cargo.toml  Makefile  README.md  config.toml  config.yaml
server/web/api-docs/: openapi.json
server/web/src/: inject.rs  main.rs  router.rs  server.rs
server/web/src/app/: mod.rs
server/web/src/config/: logger.rs  mod.rs  mysql.rs  server.rs
server/web/src/controller/: health.rs  mod.rs  welcome.rs
server/web/src/dao/: mod.rs
server/web/src/dto/: mod.rs  pagination.rs
server/web/src/middleware/: auth.rs
server/web/src/routes/: health.rs  mod.rs  prometheus.rs  welcome.rs
server/web/src/service/: mod.rs
server/web/src/timer/: mod.rs
server/web/src/utils/: convert.rs  mod.rs
(+918 files in other folders)
