[workspace]
resolver = "2"
members = [
    # 核心组件
    "crates/core/code",
    "crates/core/code_msg_derive",
    "crates/core/database",
    "crates/core/entity",
    "crates/core/logger",
    "crates/core/migration",
    "crates/core/response",
    "crates/core/context",
    "crates/core/actix_validator",
    "crates/core/utils",
    "crates/core/jwt",

    # 中间件
    "crates/middleware",
    # 插件
    "crates/plugins",
    # 应用状态
    "crates/app_state",
    # 服务集
    "crates/service_hub",

    # 应用服务
    "admin",
]

[workspace.dependencies]
# 宏
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"

# 日志
log = "0.4"
tracing = "0.1"
tracing-futures = "0.2"
tracing-serde = "0.1"
tracing-appender = "0.2"
tracing-error = "0.2"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = "0.3"
color-eyre = "0.6"

# 数据库
sea-orm = "0.12"
sea-orm-migration = "0.12"

# WEB
actix-web = "4.5"
validator_derive = "0.17"
validator = "0.17"
actix-cors = "0.7"
actix-web-requestid = "2.1"
actix-request-identifier = "4.1"
tracing-actix-web = "0.7"
listenfd = "1.0"

# 序列化
serde = "1.0"
serde_urlencoded = "0.7"
serde_json = "1.0"
serde_yaml = "0.9"

# 工具
jsonwebtoken = "9.2"
chrono = "0.4"
captcha-rs = "0.2"
sha2 = "0.10"
regex = "1.10"
uuid = "1.7.0"
time = "0.3"
rust-embed = "8.3"

# 其他
futures = "0.3"
thiserror = "1.0"
async-trait = "0.1"
async-std = "1.12"
tokio = "1.37"
once_cell = "1.19"
nject = "0.4"
dotenv = "0.15"
num_cpus = "1.16"
