[workspace]
resolver = "2"
members = [
    # 核心组件
    "crates/core/code",
    "crates/core/code_msg_derive",
    "crates/core/database",
    "crates/core/entity",
    "crates/core/logger",
    "crates/core/migration",
    "crates/core/response",
    "crates/core/context",
    "crates/core/actix_validator",
    "crates/core/utils",
    "crates/core/jwt",
    "crates/core/scheduler",
    "crates/core/cache",

    # 中间件
    "crates/middleware",
    # 插件
    "crates/plugins",
    # 定时器
    "crates/timer",
    # 依赖注入
    "crates/inject",
    # 应用状态
    "crates/app_state",
    # mock 服务
    "crates/mock_request",

    # 服务集
    "crates/service_hub",
    "crates/service_hub/public",
    "crates/service_hub/initialize",
    "crates/service_hub/template",
    "crates/service_hub/auth",
    "crates/service_hub/user",
    "crates/service_hub/permission",
    "crates/service_hub/organization",
    "crates/service_hub/system",
    "crates/service_hub/schedule",
    "crates/service_hub/log",

    # 应用服务
    "admin",
]

[workspace.dependencies]
# 日志
log = "0.4"
tracing = "0.1"
tracing-futures = "0.2"
tracing-serde = "0.1"
tracing-appender = "0.2"
tracing-error = "0.2"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = "0.3"
color-eyre = "0.6"

# 数据库
sea-orm = "0.12"
sea-orm-migration = "0.12"
sqlx = "0.7"

# WEB
actix-web = "4.5"
actix-http = "3.6"
actix-multipart = "0.6"
validator_derive = "0.18"
validator = "0.18"
actix-cors = "0.7"
actix-web-requestid = "2.1"
actix-request-identifier = "4.2"
tracing-actix-web = "0.7"
casbin = "2.2"
listenfd = "1.0"

# 序列化
serde = "1.0"
serde_repr = "0.1"
serde_urlencoded = "0.7"
serde_json = "1.0"
serde_yaml = "0.9"

# 工具
jsonwebtoken = "9.3"
chrono = "0.4"
rust_decimal = "1.35"
captcha-rs = "0.2"
sha2 = "0.10"
regex = "1.10"
uuid = "1.8"
time = "0.3"
rust-embed = "8.4"
tokio-cron-scheduler = "0.10"
uap-rust = "0.0"
futures-util = "0.3"
colored = "2.1"
moka = "0.12"
base64 = "0.22"

# 其他
futures = "0.3"
thiserror = "1.0"
async-trait = "0.1"
async-std = "1.12"
async-stream = "0.3"
tokio = "1.37"
once_cell = "1.19"
nject = "0.4"
dotenv = "0.15"
num_cpus = "1.16"
bytes = "1.6"
