[package]
name = "admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
database = { path = "../core/database" }
migration = { path = "../core/migration" }
logger = { path = "../core/logger" }
entity = { path = "../core/entity" }
code = { path = "../core/code" }
response = { path = "../core/response" }
context = { path = "../core/context" }
actix_validator = { path = "../core/actix_validator" }
utils = { path = "../core/utils" }
jwt = { path = "../core/jwt" }

actix-web = "4.5"
actix-cors = "0.7"
actix-files = "0.6"
actix-web-requestid = "2.1"
# actix-web-validator = "5.0"
actix-request-identifier = "4.1"
tracing-actix-web = "0.7"
validator = { version = "0.17", features = ["derive"] }
sea-orm = { version = "0.12" }
sea-query = { version = "0.30" }
tokio = { version = "1.36", features = [] }

log = "0.4"
tracing = "0.1"
futures = "0.3"
dotenv = "0.15"
nject = "0.4"
toml = "0.8"
base64 = "0.22"
regex = "1.10"
chrono = "0.4"
uuid = { version = "1.7.0", features = ["v4"] }
listenfd = "1.0"
num_cpus = "1.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rust-embed = { version = "8.3", features = [
    # "debug-embed",
    "include-exclude",
    "mime-guess",
] }
