[package]
name = "admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
database = { path = "../crates/core/database" }
logger = { path = "../crates/core/logger" }
code = { path = "../crates/core/code" }
context = { path = "../crates/core/context" }

middleware = { path = "../crates/middleware" }
service_hub = { path = "../crates/service_hub" }
# migration = { path = "../core/migration" }

actix-web = "4.5"
# actix-files = "0.6"
actix-web-requestid = "2.1"
# actix-web-validator = "5.0"
actix-request-identifier = "4.1"
tracing-actix-web = "0.7"
listenfd = "1.0"
num_cpus = "1.16"

tracing = "0.1"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rust-embed = { version = "8.3", features = [
    # "debug-embed",
    "include-exclude",
    "mime-guess",
] }
