[package]
name = "core"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "code",
    "code_msg_derive",
    "database",
    "entity",
    "logger",
    "migration",
    "response",
    "context",
    "actix_validator",
    "utils",
    "jwt",
]

[workspace.dependencies]
# 宏
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"

# 日志
log = "0.4"
tracing = "0.1"
tracing-futures = "0.2"
tracing-serde = "0.1"
tracing-appender = "0.2"
tracing-error = "0.2"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = "0.3"
color-eyre = "0.6"

# 数据库
sea-orm = "0.12"
sea-orm-migration = "0.12"

# WEB
actix-web = "4.5"
validator_derive = "0.17"
validator = "0.17"

# 序列化
serde = "1.0"
serde_urlencoded = "0.7"
serde_json = "1.0"

# 工具
jsonwebtoken = "9.2"
chrono = "0.4"
captcha-rs = "0.2"
rust-crypto = "0.2"

# 其他
futures = "0.3"
thiserror = "1.0"
async-trait = "0.1"
tokio = "1.37"
async-std = "1.12"
time = "0.3"
once_cell = "1.19"
