[package]
name = "code"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "code"
path = "src/lib.rs"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
thiserror = {version = "1.0"}
