[package]
name = "config"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "config"
path = "src/lib.rs"

[dependencies]
code = {path = "../code"}

log = "0.4"
tracing = "0.1"
toml = "0.8"
once_cell = "1.18"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
