[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dao = {path = "../dao"}
dto = {path = "../dto"}
database = {path = "../database"}
code = {path = "../code"}
response = {path = "../response"}
service = {path = "../service"}

validator = {version = "0.16", features = ["derive"]}
tracing = "0.1"
