[package]
name = "dao"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dao"
path = "src/lib.rs"

[dependencies]
entity = {path = "../entity"}
database = {path = "../database"}
dto = {path = "../dto"}
code = {path = "../code"}

async-trait = "0.1"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
sea-orm = {version = "0.12", features = ["macros", "debug-print"]}
sea-query = "0.30"
