[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
code = {path = "../code"}

async-trait = "0.1"
sea-orm = {version = "0.12", features = [
    "sqlx-mysql",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
]}
log = "0.4"


[dev-dependencies]
tokio = {version = "1.33", features = ["full"]}
