[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
code = { path = "../code" }

sea-orm = { version = "0.12", features = [
    "sqlx-mysql",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
async-trait = { version = "0.1" }

[dev-dependencies]
tokio = { version = "1.36", features = ["full"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "time",
    "local-time",
    "tracing-log",
] }
