[package]
name = "logger"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "logger"
path = "src/lib.rs"

[dependencies]
code = { path = "../code" }
entity = { path = "../entity" }
database = { path = "../database" }

sea-orm = { version = "0.12" }
futures = "0.3"
time = { version = "0.3", features = ["macros"] }
chrono = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tracing = { version = "0.1" }
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "time",
    "local-time",
    "tracing-log",
] }
tracing-serde = "0.1"
tracing-appender = "0.2"
tracing-error = "0.2"
tracing-bunyan-formatter = "0.3"
color-eyre = "0.6"
tokio = { version = "1.36", features = [] }


[dev-dependencies]
tokio = { version = "1.36", features = ["full"] }
once_cell = "1.19"
