[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = {path = "../entity"}
database = {path = "../database"}
dao = {path = "../dao"}
dto = {path = "../dto"}
code = {path = "../code"}
