[package]
name = "service_hub"
version = "0.1.0"
edition = "2021"

[lib]
name = "service_hub"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
database = { path = "../core/database" }
entity = { path = "../core/entity" }
code = { path = "../core/code" }
response = { path = "../core/response" }
context = { path = "../core/context" }
actix_validator = { path = "../core/actix_validator" }
utils = { path = "../core/utils" }
jwt = { path = "../core/jwt" }

app_state = { path = "../app_state" }

actix-web = { workspace = true }
actix-multipart = { workspace = true }
validator = { workspace = true, features = ["derive"] }
sea-orm = { workspace = true }

tracing = { workspace = true }
nject = { workspace = true }
rust-embed = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio-cron-scheduler = { workspace = true }
uap-rust = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "test-util",
] }
maplit = { workspace = true }
