[package]
name = "actix_validator"
version = "0.1.0"
edition = "2021"

[dependencies]
response = { path = "../response" }
code = { path = "../code" }

futures = { workspace = true }
validator_derive = { workspace = true }
validator = { workspace = true }
actix-web = { workspace = true }
serde = { workspace = true }
serde_urlencoded = { workspace = true }


[features]
