[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
code = { path = "../code" }

sea-orm = { workspace = true, features = [
    "sqlx-mysql",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
async-trait = { workspace = true }
sea-orm-migration = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "time",
    "local-time",
    "tracing-log",
] }
