[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/mod.rs"

[dependencies]
utils = { path = "../utils" }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sea-orm = { workspace = true }
chrono = { workspace = true }
