[package]
name = "initialize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../../core/database" }
entity = { path = "../../core/entity" }
code = { path = "../../core/code" }
response = { path = "../../core/response" }
context = { path = "../../core/context" }
actix_validator = { path = "../../core/actix_validator" }
utils = { path = "../../core/utils" }

inject = { path = "../../inject" }

actix-web = { workspace = true }
validator = { workspace = true, features = ["derive"] }
sea-orm = { workspace = true }

async-stream = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
nject = { workspace = true }
rust-embed = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_repr = { workspace = true }
futures-util = { workspace = true }
