[package]
name = "public"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { path = "../../core/database" }
entity = { path = "../../core/entity" }
scheduler = { path = "../../core/scheduler" }
code = { path = "../../core/code" }
response = { path = "../../core/response" }
context = { path = "../../core/context" }
actix_validator = { path = "../../core/actix_validator" }
utils = { path = "../../core/utils" }
jwt = { path = "../../core/jwt" }

inject = { path = "../../inject" }
app_state = { path = "../../app_state" }

actix-web = { workspace = true }
actix-multipart = { workspace = true }
validator = { workspace = true, features = ["derive"] }
sea-orm = { workspace = true }

async-stream = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
nject = { workspace = true }
rust-embed = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_repr = { workspace = true }
tokio-cron-scheduler = { workspace = true }
uap-rust = { workspace = true }
futures-util = { workspace = true }
