[package]
name = "schedule"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { path = "../../core/database" }
entity = { path = "../../core/entity" }
scheduler = { path = "../../core/scheduler" }
code = { path = "../../core/code" }
response = { path = "../../core/response" }
actix_validator = { path = "../../core/actix_validator" }
utils = { path = "../../core/utils" }

inject = { path = "../../inject" }

actix-web = { workspace = true }
validator = { workspace = true, features = ["derive"] }
sea-orm = { workspace = true }

async-stream = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
nject = { workspace = true }
rust-embed = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_repr = { workspace = true }
tokio-cron-scheduler = { workspace = true }
futures-util = { workspace = true }
